<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="5"
            android:rowOrderPreserved="false">
        <TextView
                android:text="@string/box_code"
                android:layout_gravity="start|center_vertical"
                android:layout_margin="@dimen/box_in_margin"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="@dimen/box_in_text_size"/>
        <EditText
                android:id="@+id/box_code"
                android:layout_gravity="fill"
                android:gravity="center"
                android:editable="false"
                android:layout_margin="@dimen/box_in_margin"
                android:textSize="@dimen/box_in_text_size"/>
        <TextView
                android:text="@string/box_customer"
                android:layout_gravity="start|center_vertical"
                android:layout_margin="@dimen/box_in_margin"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="@dimen/box_in_text_size"/>
        <EditText
                android:id="@+id/box_customer"
                android:layout_gravity="fill"
                android:gravity="center"
                android:editable="false"
                android:layout_margin="@dimen/box_in_margin"
                android:textSize="@dimen/box_in_text_size"/>
        <TextView
                android:text="@string/box_product"
                android:layout_gravity="start|center_vertical"
                android:layout_margin="@dimen/box_in_margin"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="@dimen/box_in_text_size"/>
        <EditText
                android:id="@+id/box_product"
                android:layout_gravity="fill"
                android:gravity="center"
                android:editable="false"
                android:layout_margin="@dimen/box_in_margin"
                android:textSize="@dimen/box_in_text_size"/>
        <TextView
                android:text="@string/box_heat_no"
                android:layout_gravity="start|center_vertical"
                android:layout_margin="@dimen/box_in_margin"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="@dimen/box_in_text_size"/>
        <EditText
                android:id="@+id/box_heat_no"
                android:layout_gravity="fill"
                android:gravity="center"
                android:editable="false"
                android:layout_margin="@dimen/box_in_margin"
                android:textSize="@dimen/box_in_text_size"/>
        <TextView
                android:text="@string/box_total_num"
                android:layout_gravity="start|center_vertical"
                android:layout_margin="@dimen/box_in_margin"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="@dimen/box_in_text_size"/>
        <EditText
                android:id="@+id/box_total_num"
                android:layout_gravity="fill"
                android:gravity="center"
                android:editable="false"
                android:layout_margin="@dimen/box_in_margin"
                android:textSize="@dimen/box_in_text_size"/>
        <TextView
                android:text="@string/box_state"
                android:layout_gravity="start|center_vertical"
                android:layout_margin="@dimen/box_in_margin"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="@dimen/box_in_text_size"/>
        <EditText
                android:id="@+id/box_state"
                android:layout_gravity="fill"
                android:gravity="center"
                android:editable="false"
                android:layout_margin="@dimen/box_in_margin"
                android:textSize="@dimen/box_in_text_size"/>
    </GridLayout>
        <Button
                android:id="@+id/in_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:padding="6dp"
                android:background="@color/button_bg"
                android:textColor="@android:color/white"
                android:text="@string/box_back_start"
                android:textSize="20sp"
                android:onClick="boxBackClick"/>
</merge>