<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="7"
            android:rowOrderPreserved="false">
        <TextView
                android:text="@string/parts_no"
                android:layout_gravity="start|center_vertical"
                android:layout_margin="@dimen/box_in_margin"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="@dimen/print_mark_text_size"/>
        <EditText
                android:id="@+id/mark_product"
                android:layout_gravity="fill"
                android:gravity="center"
                android:editable="false"
                android:layout_margin="@dimen/box_in_margin"
                android:textSize="@dimen/print_mark_text_size"/>
        <TextView
                android:text="@string/count_no"
                android:layout_gravity="start|center_vertical"
                android:layout_margin="@dimen/box_in_margin"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="@dimen/print_mark_text_size"/>
        <EditText
                android:id="@+id/count_no"
                android:layout_gravity="fill"
                android:gravity="center"
                android:editable="false"
                android:layout_margin="@dimen/box_in_margin"
                android:textSize="@dimen/print_mark_text_size"/>
        <TextView
                android:text="@string/lot_no"
                android:layout_gravity="start|center_vertical"
                android:layout_margin="@dimen/box_in_margin"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="@dimen/print_mark_text_size"/>
        <EditText
                android:id="@+id/lot_no"
                android:layout_gravity="fill"
                android:gravity="center"
                android:editable="false"
                android:layout_margin="@dimen/box_in_margin"
                android:textSize="@dimen/print_mark_text_size"/>
        <TextView
                android:text="@string/pcs"
                android:layout_gravity="start|center_vertical"
                android:layout_margin="@dimen/box_in_margin"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="@dimen/print_mark_text_size"/>
        <EditText
                android:id="@+id/pcs"
                android:layout_gravity="fill"
                android:gravity="center"
                android:editable="false"
                android:layout_margin="@dimen/box_in_margin"
                android:textSize="@dimen/print_mark_text_size"/>
        <TextView
                android:text="@string/case_no"
                android:layout_gravity="start|center_vertical"
                android:layout_margin="@dimen/box_in_margin"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="@dimen/print_mark_text_size"/>
        <EditText
                android:id="@+id/case_no"
                android:layout_gravity="fill"
                android:gravity="center"
                android:editable="false"
                android:layout_margin="@dimen/box_in_margin"
                android:textSize="@dimen/print_mark_text_size"/>
        <TextView
                android:text="@string/mark_code"
                android:layout_gravity="start|center_vertical"
                android:layout_margin="@dimen/box_in_margin"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="@dimen/print_mark_text_size"/>
        <EditText
                android:id="@+id/mark_code"
                android:layout_gravity="fill"
                android:gravity="center"
                android:editable="false"
                android:layout_margin="@dimen/box_in_margin"
                android:textSize="@dimen/print_mark_text_size"/>
        <TextView
                android:text="@string/mark_page"
                android:layout_gravity="start|center_vertical"
                android:layout_margin="@dimen/box_in_margin"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="@dimen/print_mark_text_size"/>
        <EditText
                android:id="@+id/mark_page"
                android:layout_gravity="fill"
                android:gravity="center"
                android:editable="false"
                android:layout_margin="@dimen/box_in_margin"
                android:textSize="@dimen/print_mark_text_size"/>
    </GridLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_gravity="center_horizontal|bottom">
            <Button
                    android:id="@+id/print_one_button"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="2dp"
                    android:padding="6dp"
                    android:background="@color/button_bg"
                    android:layout_gravity="center_horizontal|bottom"
                    android:textColor="@android:color/white"
                    android:text="@string/print_one_mark_start"
                    android:textSize="20sp"
                    android:onClick="printOneMarkClick"/>
            <Button
                    android:id="@+id/print_all_button"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="2dp"
                    android:padding="6dp"
                    android:background="@color/button_bg"
                    android:layout_gravity="center_horizontal|bottom"
                    android:textColor="@android:color/white"
                    android:text="@string/print_all_mark_start"
                    android:textSize="20sp"
                    android:onClick="printAllMarkClick"/>
    </LinearLayout>
</merge>