<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">
    <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="3"
            android:rowOrderPreserved="false">
        <TextView
                android:text="@string/box_code"
                android:layout_gravity="start|center_vertical"
                android:layout_margin="@dimen/box_in_margin"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="@dimen/box_in_text_size"/>
        <EditText
                android:id="@+id/box_code"
                android:layout_gravity="fill"
                android:gravity="center"
                android:editable="false"
                android:layout_margin="@dimen/box_in_margin"
                android:textSize="@dimen/box_in_text_size"/>
        <TextView
                android:text="@string/mark_page"
                android:layout_gravity="start|center_vertical"
                android:layout_margin="@dimen/box_in_margin"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="@dimen/box_in_text_size"/>
        <EditText
                android:id="@+id/mark_page"
                android:layout_gravity="fill"
                android:gravity="center"
                android:editable="false"
                android:layout_margin="@dimen/box_in_margin"
                android:textSize="@dimen/box_in_text_size"/>
        <TextView
                android:text="@string/checked_page"
                android:layout_gravity="start|center_vertical"
                android:layout_margin="@dimen/box_in_margin"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="@dimen/box_in_text_size"/>
        <EditText
                android:id="@+id/checked_page"
                android:layout_gravity="fill"
                android:gravity="center"
                android:editable="false"
                android:layout_margin="@dimen/box_in_margin"
                android:textSize="@dimen/box_in_text_size"/>
    </GridLayout>
    <ListView
            android:id="@+id/mark_code"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

    </ListView>
        <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:background="@color/button_bg"
                android:layout_gravity="center_horizontal|bottom"
                android:textColor="@android:color/white"
                android:text="@string/mark_check_start"
                android:textSize="20sp"
                android:onClick="markCheckClick"/>
</LinearLayout>