<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <ListView
            android:id="@+id/bluetooth_device"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    </ListView>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@android:color/darker_gray"
            android:gravity="right">
        <TextView
                android:id="@+id/progress_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:paddingRight="10dp"
                android:text="@string/scanning"/>
        <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"/>

    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_marginRight="2dp"
                android:padding="6dp"
                android:background="@color/button_bg"
                android:layout_gravity="center_horizontal|bottom"
                android:textColor="@android:color/white"
                android:textSize="@dimen/set_print_size"
                android:text="@string/open_bluetooth"
                android:onClick="openBluetooth"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:padding="6dp"
                android:background="@color/button_bg"
                android:layout_gravity="center_horizontal|bottom"
                android:textColor="@android:color/white"
                android:textSize="@dimen/set_print_size"
                android:text="@string/scan"
                android:onClick="scanBluetooth"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="2dp"
                android:padding="6dp"
                android:background="@color/button_bg"
                android:layout_gravity="center_horizontal|bottom"
                android:textColor="@android:color/white"
                android:textSize="@dimen/set_print_size"
                android:text="@string/disconnect"
                android:onClick="disconnect"/>
    </LinearLayout>
</LinearLayout>