<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android" >
        <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:rowCount="2"
                android:rowOrderPreserved="false">
                <TextView
                        android:text="@string/box_out_order_id"
                        android:layout_gravity="start|center_vertical"
                        android:layout_margin="@dimen/box_in_margin"
                        android:textColor="@android:color/holo_blue_light"
                        android:textSize="@dimen/box_in_text_size"/>
                <EditText
                        android:id="@+id/order_id"
                        android:layout_gravity="fill"
                        android:gravity="center"
                        android:editable="false"
                        android:layout_margin="@dimen/box_in_margin"
                        android:textSize="@dimen/box_in_text_size"/>
                <TextView
                        android:text="@string/box_num"
                        android:layout_gravity="start|center_vertical"
                        android:layout_margin="@dimen/box_in_margin"
                        android:textColor="@android:color/holo_blue_light"
                        android:textSize="@dimen/box_in_text_size"/>
                <EditText
                        android:id="@+id/box_num"
                        android:layout_gravity="fill"
                        android:gravity="center"
                        android:editable="false"
                        android:layout_margin="@dimen/box_in_margin"
                        android:textSize="@dimen/box_in_text_size"/>
        </GridLayout>
        <ListView
                android:id="@+id/lv_box"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:choiceMode="singleChoice">

        </ListView>
        <Button
                android:id="@+id/in_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:background="@color/button_bg"
                android:layout_gravity="center_horizontal|bottom"
                android:textColor="@android:color/white"
                android:text="@string/box_out_start"
                android:textSize="20sp"
                android:onClick="boxOutClick"/>
</LinearLayout>
