<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="10dp">
        <ListView
                android:id="@+id/menu"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        <GridLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:rowCount="3"
                android:columnCount="2"
                android:background="@android:color/darker_gray">
                <TextView
                        android:id="@+id/user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_gravity="fill"
                        android:gravity="center"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="@dimen/main_text_size"
                        android:text="@string/user_not_login"/>
                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_gravity="fill"
                        android:paddingTop="6dp"
                        android:paddingBottom="6dp"
                        android:paddingLeft="12dp"
                        android:paddingRight="12dp"
                        android:textSize="@dimen/main_button_small_size"
                        android:background="@android:color/holo_red_dark"
                        android:textColor="@android:color/white"
                        android:text="@string/main_login_out"
                        android:onClick="loginOutClickMain"/>
                <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="2dp"
                        android:layout_columnSpan="2"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@android:color/darker_gray"
                        />
                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_gravity="fill"
                        android:orientation="vertical">
                        <TextView
                                android:id="@+id/bluetooth_mac"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:textSize="@dimen/main_text_size"
                                android:textColor="@android:color/white"/>
                        <TextView
                                android:id="@+id/bluetooth_info"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:textSize="@dimen/main_text_size"
                                android:textColor="@android:color/holo_red_dark"
                                android:text="@string/no_bluetooth_device"/>
                </LinearLayout>
                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_gravity="fill"
                        android:paddingTop="6dp"
                        android:paddingBottom="6dp"
                        android:paddingLeft="12dp"
                        android:paddingRight="12dp"
                        android:background="@android:color/holo_blue_dark"
                        android:text="@string/main_connect_print"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/main_button_small_size"
                        android:onClick="connectPrintClickMain"/>
        </GridLayout>
</LinearLayout>